c语言方法里创建static变量

--- a/text/makefile
+++ b/text/makefile
@@ -1,10 +1,14 @@
-tishi:=@
+tishi:=
 debug:=-g
-liuxin: main.o
-	$(tishi)gcc  $(debug)	-o	 liuxin main.o
+# debug+=00000
+objects:=main.o  test1.o
+liuxin: $(objects)
+	$(tishi)gcc  $(debug)	-o	  $@  $^
 
-main.o: main.c
-	$(tishi)@gcc $(debug) -c main.c
+main.o: main.c  test1.h
+	$(tishi)@gcc $(debug) -c  -o $@ $^
+test1.o: test1.c   
+	$(tishi)@gcc $(debug) -c  -o $@  $^
 
 clear:
-	$(tishi)rm -rf liuxin  main.o	
+	$(tishi)rm -rf liuxin  $(objects)
