--- a/NodeJs/study1/package.json
+++ b/NodeJs/study1/package.json
@@ -13,5 +13,6 @@
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^4.1.3"
-  }
+  },
+  "devDependencies": {}
 }
