--- a/NodeJs/study1/package.json
+++ b/NodeJs/study1/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
+    "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^4.1.3"
