--- a/NodeJs/study1/package.json
+++ b/NodeJs/study1/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.14",
+    "@types/node": "^14.14.16",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
