--- a/NodeJs/study1/package.json
+++ b/NodeJs/study1/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.16",
+    "@types/node": "^14.14.20",
+    "async": "^3.2.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^4.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/async": "^3.2.5"
+  }
 }
